@@ -223,3 +223,5 @@ EDITATTRIBUTE.text=\u0045\u0064\u0069\u0074\u0020\u0041\u0074\u0074\u0072\u0069\
 EDITINDEX.text=\u0045\u0064\u0069\u0074\u0020\u0049\u006e\u0064\u0065\u0078\u0020\u007b\u0030\u007d
 EDITSUBJECTAREA.text=\u0045\u0064\u0069\u0074\u0020\u0053\u0075\u0062\u006a\u0065\u0063\u0074\u0020\u0041\u0072\u0065\u0061\u0020\u007b\u0030\u007d
 SQL.text=\u0053\u0051\u004c
+EXPANDALL.text=\u0045\u0078\u0070\u0061\u006e\u0064\u0020\u0061\u006c\u006c
+COLLAPSEALL.text=\u0043\u006f\u006c\u006c\u0061\u0070\u0073\u0065\u0020\u0061\u006c\u006c
